--- a/Dumbbell/Resources/bg.plist
+++ b/Dumbbell/Resources/bg.plist
@@ -7,7 +7,21 @@
 			<key>bg_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,512},{256,256}}</string>
+				<string>{{256,0},{256,256}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{256,256}}</string>
+				<key>sourceSize</key>
+				<string>{256,256}</string>
+			</dict>
+
+			<key>bg_10.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +35,7 @@
 			<key>bg_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{256,0},{256,256}}</string>
+				<string>{{512,0},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +49,7 @@
 			<key>bg_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,768},{256,256}}</string>
+				<string>{{256,768},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +63,7 @@
 			<key>bg_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{256,256},{256,256}}</string>
+				<string>{{256,512},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +77,7 @@
 			<key>bg_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,256},{256,256}}</string>
+				<string>{{256,256},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +91,49 @@
 			<key>bg_6.png</key>
 			<dict>
 				<key>frame</key>
+				<string>{{512,256},{256,256}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
 				<string>{{0,0},{256,256}}</string>
+				<key>sourceSize</key>
+				<string>{256,256}</string>
+			</dict>
+
+			<key>bg_7.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,768},{256,256}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{256,256}}</string>
+				<key>sourceSize</key>
+				<string>{256,256}</string>
+			</dict>
+
+			<key>bg_8.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,512},{256,256}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{256,256}}</string>
+				<key>sourceSize</key>
+				<string>{256,256}</string>
+			</dict>
+
+			<key>bg_9.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,256},{256,256}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -95,7 +151,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,1024}</string>
+			<string>{1024,1024}</string>
 			<key>textureFileName</key>
 			<string>bg.png</string>
 			</dict>
